<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.11</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.brenner</groupId>
	<artifactId>modern-java-crud</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>modern-java-crud</name>
	<description>Modern Java CRUD</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<spring-cloud.version>2025.0.1</spring-cloud.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<skipITs>false</skipITs>
		<excluded.test.groups></excluded.test.groups>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.16</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.resilience4j</groupId>
			<artifactId>resilience4j-spring-boot3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.mapstruct</groupId>
    		<artifactId>mapstruct</artifactId>
    		<version>1.5.5.Final</version>
		</dependency>
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <optional>true</optional>
		</dependency>
		<dependency>
	    	<groupId>org.projectlombok</groupId>
	    	<artifactId>lombok-mapstruct-binding</artifactId>
			<version>${lombok-mapstruct-binding.version}</version>
		</dependency>
		<dependency>
    	<groupId>org.hibernate.orm</groupId>
    		<artifactId>hibernate-jpamodelgen</artifactId>
    		<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-docker-compose</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.instancio</groupId>
    		<artifactId>instancio-junit</artifactId>
    		<version>5.5.1</version>
    		<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
            	<groupId>org.apache.maven.plugins</groupId>
            	<artifactId>maven-compiler-plugin</artifactId>
            	<configuration>
          			<release>${java.version}</release>
                	<annotationProcessorPaths>
						<path>
			                <groupId>org.projectlombok</groupId>
			                <artifactId>lombok</artifactId>
			                <version>${lombok.version}</version>
			            </path>
			            <path>
			                <groupId>org.projectlombok</groupId>
			                <artifactId>lombok-mapstruct-binding</artifactId>
			                <version>${lombok-mapstruct-binding.version}</version>
			            </path>
			            <path>
			                <groupId>org.mapstruct</groupId>
			                <artifactId>mapstruct-processor</artifactId>
			                <version>${mapstruct.version}</version>
			            </path>
			            <path>
			                <groupId>org.hibernate.orm</groupId>
			                <artifactId>hibernate-jpamodelgen</artifactId>
			                <version>${hibernate.version}</version>
			            </path>
                	</annotationProcessorPaths>
            	</configuration>
        	</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <configuration>
					<excludedGroups>${excluded.test.groups}</excludedGroups>
			        <argLine>
			            -XX:+EnableDynamicAgentLoading
			            -Dmockito.inline=true
			            -Xshare:off
			        </argLine>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<skipITs>${skipITs}</skipITs>
					<excludedGroups>${excluded.test.groups}</excludedGroups>
					<includes>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
			  <groupId>com.diffplug.spotless</groupId>
			  <artifactId>spotless-maven-plugin</artifactId>
			  <version>3.2.1</version>

			  <configuration>
			    <java>
				  <eclipse>
				  	<file>formatter.xml</file>
				  </eclipse>
				  <importOrder>
					<order>\#, ,com.brenner, ,java, ,jakarta, ,javax, ,org, ,com</order>
			      </importOrder>
				  <removeUnusedImports />
				  <trimTrailingWhitespace />
				  <endWithNewline />
				</java>

			    <formats>
			      <format>
			        <includes>
			          <include>**/*.yml</include>
			          <include>**/*.yaml</include>
			        </includes>

			        <trimTrailingWhitespace />
			        <endWithNewline />

			        <indent>
			          <spaces>true</spaces>
			          <spacesPerTab>2</spacesPerTab>
			        </indent>
			      </format>
			    </formats>
			  </configuration>

			  <executions>
			    <execution>
			      <goals>
			        <goal>check</goal>
			      </goals>
			      <phase>process-sources</phase>
			    </execution>
			  </executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>docker-off</id>
			<properties>
				<skipITs>true</skipITs>
				<excluded.test.groups>docker</excluded.test.groups>
			</properties>
		</profile>
	</profiles>

</project>
